--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.crystal.hello">
 
     <uses-permission android:name="android.permission.INTERNET" />
-<!--    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
 
     <application
         android:allowBackup="true"
@@ -13,39 +11,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".HomeActivity"></activity>
         <activity
             android:name=".LoginActivity"
-            android:windowSoftInputMode="adjustResize" >
-        </activity>
-
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity android:name=".InitialConnectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MobileNumberActivity"
-            android:windowSoftInputMode="adjustResize" >
-        </activity>
-
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name=".PasswordActivity"
-            android:windowSoftInputMode="adjustResize" >
-        </activity>
-
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name=".NameActivity"
-            android:windowSoftInputMode="adjustResize" >
-        </activity>
-
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name=".EmailActivity"
-            android:windowSoftInputMode="adjustResize" >
-        </activity>
-
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity android:name=".MainActivity">
+
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
@@ -56,4 +46,5 @@
             android:name="com.plaid.link.public_key"
             android:value="@string/plaid_public_key" />
     </application>
+
 </manifest>
