--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.plaid.link:sdk-core:1.4.0'
     implementation 'com.plaid:plaid-java:5.7.0'
     implementation 'com.google.android.material:material:1.1.0'
