--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <activity
+            android:name=".TransactionMonthlyActivityFragment" />
+
+
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home">
