--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.crystal.hello">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission
+        android:name="android.permission.INTERNET" />
+    <uses-permission
+        android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,22 +17,15 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".TransactionMonthlyActivityFragment" />
-
-        <activity
-            android:name=".HomeActivity"
-            android:label="@string/title_activity_home">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
+            android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:windowSoftInputMode="adjustResize" />
 
-        <activity android:name=".InitialConnectActivity">
+        <activity
+            android:name=".InitialConnectActivity">
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
@@ -37,28 +33,34 @@
         </activity>
 
         <activity
+            android:name=".TransactionMonthlyActivityFragment" />
+
+        <activity
+            android:name=".HomeActivity"
+            android:label="@string/title_activity_home"/>
+
+        <activity
+            android:name=".LoginActivity"
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity
             android:name=".MobileNumberActivity"
             android:windowSoftInputMode="adjustResize" />
+
         <activity
             android:name=".PasswordActivity"
             android:windowSoftInputMode="adjustResize" />
+
         <activity
             android:name=".NameActivity"
             android:windowSoftInputMode="adjustResize" />
+
         <activity
             android:name=".EmailActivity"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".MainActivity">
-
-             <intent-filter>
-             <action android:name="android.intent.action.MAIN" />
-             <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
-        </activity>
 
         <meta-data
             android:name="com.plaid.link.public_key"
             android:value="@string/plaid_public_key" />
     </application>
-
 </manifest>
