--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.crystal.hello">
 
-    <uses-permission
-        android:name="android.permission.INTERNET" />
-    <uses-permission
-        android:name="android.permission.ACCESS_NETWORK_STATE" />
+<!--    <uses-permission-->
+<!--        android:name="android.permission.INTERNET" />-->
+<!--    <uses-permission-->
+<!--        android:name="android.permission.ACCESS_NETWORK_STATE" />-->
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -25,24 +25,11 @@
         </activity>
 
         <activity
-            android:name=".signup.InitialConnectActivity">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
-
-        <activity
-            android:name=".TransactionMonthlyActivityFragment" />
+            android:name=".signup.InitialConnectActivity"/>
 
         <activity
             android:name=".HomeActivity"
-            android:label="@string/title_activity_home">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
+            android:label="@string/title_activity_home"/>
 
         <activity
             android:name=".LoginActivity"
