--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.crystal.hello">
 
-<!--    <uses-permission-->
-<!--        android:name="android.permission.INTERNET" />-->
-<!--    <uses-permission-->
-<!--        android:name="android.permission.ACCESS_NETWORK_STATE" />-->
-
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:versionCode="1"
+        android:versionName="1.0">
 
         <activity
             android:name=".MainActivity">
