--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,6 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
-            debuggable true
         }
     }
     compileOptions {
@@ -45,18 +44,19 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
 
     implementation 'joda-time:joda-time:2.10.6'
     implementation 'com.plaid:plaid-java:7.1.0'
     implementation 'com.plaid.link:sdk-core:3.0.1'
     implementation 'com.robinhood.spark:spark:1.2.0'
+    implementation 'com.google.firebase:firebase-auth'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.firebase:firebase-auth:19.4.0'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'com.google.firebase:firebase-analytics:17.5.0'
-    implementation 'com.google.firebase:firebase-firestore:21.7.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation platform('com.google.firebase:firebase-bom:25.12.0')
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
