--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-ui:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.plaid.link:sdk-core:3.0.1'
     implementation 'com.robinhood.spark:spark:1.2.0'
     implementation 'com.google.firebase:firebase-auth'
+    implementation 'org.apache.commons:commons-text:1.9'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-firestore'
